--- a/src/styles/zodit.less
+++ b/src/styles/zodit.less
@@ -16,7 +16,7 @@
 	.zodit-workplace {
 		position: relative;
 		overflow: auto;
-
+		background: white;
 		.zodit-wysiwyg,
 		.zodit-wysiwyg_iframe {
 			width: 100%;
@@ -38,6 +38,7 @@
 
 	.zodit-workplace {
 		max-height: 100%;
+		background: white;
 		border: 0 solid var(--color-border);
 	}
 
