--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -47,7 +47,7 @@
 	--color-panel: #f9f9f9;
 	--color-resizer: #c8c8c8;
 
-	--color-background-default: var(--color-white);
+	--color-background-default:#ffff;
 	--color-background-gray: var(--color-gray);
 	--color-background-gray-hover: #f8f8f8;
 	--color-background-hover: #7a450f;
